Close file streams as per API notes